src/index.css
@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700;800&display=swap");

* {
    margin: 0;
}

body {
    font-family: "Raleway";
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2rem;
}

/* Global Typography */
h5 {
    font-size: 0.75rem;
    letter-spacing: 0.3rem;
    text-transform: uppercase;
    font-weight: 500;
}

h6 {
    font-size: 1.8rem;
    font-weight: 600;
}

img {
    /* Prevent Img from being draggable */
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.page-container {
    padding-left: 4vw;
    padding-right: 4vw;
    @media (width >= 2500px) {
        & {
            padding-left: 10vw;
            padding-right: 10vw;
        }
    }
    @media (width >= 3000px) {
        & {
            padding-left: 15vw;
            padding-right: 15vw;
        }
    }
    @media (width >= 4000px) {
        & {
            padding-left: 20vw;
            padding-right: 20vw;
        }
    }

    & h1 {
        font-size: 3.5rem;
        font-weight: 900;
    }
    & h3 {
        font-size: 1.2rem;
        font-weight: 500;
    }
}

/* Padding for Top Navbar */
.padding-for-nav {
    padding-top: 3.6rem;
    @media (width >= 700px) {
        & {
            padding-top: 5.6rem;
        }
    }
}

.nav-menu-item-active {
    color: white;
    text-decoration: underline;
}

.nav-menu-item {
    color: black;
    text-decoration: none;
    cursor: pointer;
    &:hover {
        color: white;
    }
}

/* Home Profile Image CSS */

.hero-img-container {
    width: 300px;
    @media (width <= 900px) {
        & {
            width: 100%;
        }
    }
}

.profile-img {
    width: 100%;
    transform: scale(1.5) translate(0, 0);
    @media (width <= 900px) {
        & {
            transform: scale(1) translate(0, 0);
            min-height: 276px;
            min-width: 290px;
        }
    }
    @media (width <= 650px) {
        & {
            transform: scale(1) translate(0, 0);
            height: 100%;
            width: 100%;
            min-height: 100%;
            min-width: 100%;
        }
    }
}

.title {
    @media (width <= 900px) {
        & h1 {
            font-size: clamp(1.8rem, 4vw, 2.2rem);
        }
        & h3 {
            font-size: clamp(1rem, 2.1vw, 1.2rem);
        }
    }
}

/* Responsive Desktop Font */
@media (min-width: 900px) {
    .title h1 {
        font-size: clamp(2.5rem, 4vw, 3.5rem);
    }
}

@media (max-width: 900px) {
}

/* Responsive Mobile Font */

@media (max-width: 510px) {
    .title h1 {
        font-size: clamp(1rem, 6vw, 2rem);
    }
    .title h5 {
        font-size: clamp(0.4rem, 2vw, 0.75rem);
    }
    .title h3 {
        font-size: clamp(0.7rem, 4vw, 1.2rem);
    }
}

/* Call To Action Responsiveness*/

@media (max-width: 390px) {
    #call-to-action-h1 {
        font-size: clamp(2rem, 13vw, 3.5rem);
    }
}

/* Responsive Project Card Font */
.project-cards h1 {
    font-size: clamp(2rem, 5vw, 3.5rem);
}

.project-cards p {
    font-size: clamp(0.75rem, 1.5vw, 1rem);
}

.project-cards h2 {
    font-size: clamp(1.3rem, 2.6vw, 2rem);
}

@media (max-width: 650px) {
    .project-cards h1 {
        font-size: clamp(2rem, 8.5vw, 3.5rem);
    }

    .project-cards p {
        font-size: clamp(0.75rem, 2.5vw, 1rem);
    }

    .project-cards h2 {
        font-size: clamp(1.3rem, 5vw, 2rem);
    }
}

/* About Me Graduation Carousel Photos */
/* square buttons */
.rec.rec-arrow {
    border-radius: 0;
}
/* round buttons on hover */
.rec.rec-arrow-left:hover:enabled,
.rec.rec-arrow-right:hover:enabled {
    border-radius: 50%;
    background-color: orange;
}

.rec.rec-arrow:focus:enabled {
    background-color: orange;
}
/* hide disabled buttons */
.rec.rec-arrow:disabled {
    visibility: hidden;
}

button.rec-dot:hover,
button.rec-dot_active,
button.rec-dot:focus {
    background-color: orange;
    box-shadow: 0 0 1px 3px rgb(250, 194, 141);
}

@media (max-width: 550px) {
    .rec.rec-arrow {
        border-radius: 0;
        display: none;
    }
}

/* Responsive font for About me Title */

.about-title h1 {
    font-size: clamp(1.8rem, 4.5vw, 3.5rem);
    text-align: center;
    max-width: 1200px;
}

.about-title h6 {
    font-size: clamp(1.2rem, 2.4vw, 1.8rem);
    text-align: center;
    width: 70vw;
}

@media (max-width: 600px) {
    .about-title h1 {
        text-align: start;
    }

    .about-title h6 {
        text-align: start;
        width: 100%;
    }
}

/* Responsive Font for Contact Me */

.contact-me-page h1 {
    font-size: clamp(2.4rem, 5.5vw, 3rem);
}

@media (max-width: 700px) {
    .contact-me-page h1 {
        font-size: clamp(2.4rem, 11vw, 3rem);
    }
}

